--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 electronic system.s#3
 electronic system.s#1
 electronic system.s#2
+electronic system.b#2
+electronic system.b#1
+electronic system.s#5
+electronic system.s#6
+electronic system.s#4
